--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -304,6 +304,12 @@
     width: 670px ! important;
   }
  } 
+ @media only screen and (device-width : 1680px){ 
+  .B4T_ServicesDiv{
+    margin-left: 89px ! important;
+    width: 670px ! important;
+  }
+ } 
  @media only screen and (device-width : 1920px) { 
   .B4T_ServicesDiv{
     margin-left: 89px ! important;
