--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -1439,6 +1439,20 @@ border:1px solid #eee ! important;
     font-size: 20px ! important;
   }
  }
+ @media only screen and (device-width : 800px) {
+  .headerlogo img{
+    height: 78px ! important;
+    margin-left: -57px;
+  }
+  .topnav a{
+    font-size: 9px ! important;
+    padding: -2px 2px ! important; 
+  }
+  .dropdown .dropbtn{
+    font-size: 9px ! important;
+    padding: 14px 2px ! important;
+  }
+ }
 
 
 
