--- a/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
@@ -11,6 +11,9 @@
     margin-bottom: 25px;
     /*margin-top: 40px;*/
 }
+.TypebtnText_Padding{
+    padding-top: 6%;
+}
 .typebtn_img{
 	padding-top: 10px;
 }
