Karuna added changes

--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1871,6 +1871,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .DirectorText{
     padding-top: 10px ! important;
   }
+  .newcard_HD {
+    width: 260px;
+  }
  }
  @media screen and (device-width: 1920px){
 
@@ -1892,7 +1895,7 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     width: 465px ! important;
   }
   .newcard_HD {
-    width: 370px ! important;
+    width: 400px ! important;
   }
   .roadjourny{
     z-index: 0 ! important;
