--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -261,11 +261,7 @@
       letter-spacing: 0.3px ! important;
     }
   }
-  @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+  @media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
    
      .B4T_ServicesDiv{
       margin-left: 50px ! important;
@@ -273,26 +269,18 @@
      }
 
   } 
-  @media only screen 
-  and (device-width: 1536px) 
-  and (device-height: 2048px) 
-  and (orientation: portrait){
+  @media only screen and (device-width: 1536px) and (device-height: 2048px) and (orientation: portrait){
     .B4T_ServicesDiv{
       margin-left: 85px ! important;
     }
   }
-   @media only screen 
-  and (device-width: 2048px) 
-  and (device-height: 1536px) 
-  and (orientation: landscape){
+   @media only screen  and (device-width: 2048px) and (device-height: 1536px) and (orientation: landscape){
     .B4T_ServicesDiv{
       margin-left: 110px ! important;
       width: 830px ! important;
     }
   } 
-   @media only screen 
-  and (device-width: 2560px) 
-  and (device-height: 1600px) 
+   @media only screen and (device-width: 2560px) and (device-height: 1600px) 
   {
     .B4T_ServicesDiv {
         width: 950px;
