--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1823,7 +1823,13 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
  }
  @media only screen and (device-width : 1680px){ 
   .newcard_HD {
-    width: 330px ! important;
+    width: 350px ! important;
+  }
+  .newcard{
+    width: 350px ! important;
+  }
+  .dwstmTitle{
+    font-size: 22px ! important;
   }
   .roadjourny{
     z-index: 0;
@@ -1845,6 +1851,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
   .roadjourny{
     z-index: 0;
   }
+  .newcard{
+    width: 250px ! important;
+  }
  }
  @media only screen and (device-width : 1280px){ 
   .All1blog1{
@@ -1857,6 +1866,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     padding-top: 10px ! important;
   }
   .newcard_HD {
+    width: 260px ! important;
+  }
+  .newcard{
     width: 260px ! important;
   }
  }
@@ -1900,7 +1912,7 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 
   }
   .newcard{
-    width: 370px ! important;
+    width: 385px ! important;
   }
   .ApplicationImg{
     padding-left: 110px ! important;
@@ -1955,7 +1967,7 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 
    }
    .newcard {
-    width: 265px ! important;
+    width: 255px ! important;
   }
   .All1blog1{
     margin-left: 71px ! important;
